# MergeSort

./: .gitignore  CMakeLists.txt  main.c  readme.md
headers/: merge.h  mergesort.h  sort.h
scripts/: build.sh  clean.sh  colors.sh  run.sh
src/: merge.c  mergesort.c  sort.c
